# crossbar

./: .dockerignore  .gitignore  .gitlab-ci.yml  Dockerfile  MANIFEST.in  README.md  pyproject.toml  requirements-latest.txt  requirements-min.txt  requirements-nexus.txt  run-server.sh  run.sh  setup-izaber.py  setup.py
crossbar/: _logging.py  personality.py
crossbar/common/: checkconfig.py
crossbar/node/: controller.py  main.py  node.py
crossbar/router/: cookiestore.py  dealer.py  router.py  service.py  session.py
crossbar/webservice/: static.py
crossbar/worker/: main.py
data/: README.md  config.yaml.example  izaber.yaml.example
docker/: 99apt-timeouts  crontab  entry.sh  run-cron.sh  run-users-sync.sh  run-vacuum.sh
docs/: database.md  sessioning.md  uris.md
docs-nexus/: database.md  legacy-uris.md  otp.md  rosters.md  rpc.md  uris.md
nexus/: __init__.py  constants.py  log.py
nexus/cli/: __init__.py  izaber.yaml.template
nexus/component/: base.py  domain.py  utils.py
nexus/cron/: __init__.py
nexus/domain/: __init__.py  controller.py  ldap.py
nexus/domain/auth/: __init__.py  trie.py
nexus/domain/db/: __init__.py  apikeys.py  common.py  cookies.py  metadata.py  otp.py  registrations.py  roles.py  rosters.py  uris.py  users.py
nexus/orm/: __init__.py  collection.py  common.py  db.py  field.py  filter.py  record.py  schema.py
nexus/web/static/: index.html  package-lock.json  package.json  webpack.config.js
nexus/web/static/public/: app.js
nexus/web/static/public/js/: main.js
nexus/web/static/views/: frame.html  login.html  perm.html  role.html  role_permission.html  role_permission_new.html  roles.html  uri.html  uris.html  user.html  user_new.html  users.html
scripts/: db.py
scripts/monitor/: Pipfile  check.py
scripts/monitor/templates/: check.txt
tests/: run-tests.py  test_00-db-schema.py  test_00-db.py  test_01-trie.py  test_10-db.py  test_20-nexus-apikey-limits.py  test_20-nexus-otp-limits.py  test_20-nexus.py  test_21-nexus-cookie-timeouts.py  test_22-nexus-reconnections.py  test_23-nexus-special-auth.py  test_24-nexus-subscribe-error.py  test_25-nexus-cookie-removals.py  test_26-nexus-uri-warnings-scheduler.py  test_26-nexus-uri-warnings.py  test_28-nexus-out-of-band-authenticate.py  test_30-services.py  test_40-stats.py  test_50-rosters.py  test_60-nexus-uri-zombie-reaping.py
tests/data/: config.yaml  izaber.yaml  ldap-mock-data.yaml
tests/lib/: __init__.py  common.py  launcher.py  ldap.py
web/: index.html
web/public/: app.js
web/public/css/: main.css
web/public/js/: main.js
web/views/: apikey.html  apikey_permission.html  apikey_permissions.html  apikeys.html  frame.html  main.html  metadata.html  metadatum.html  registration.html  registrations.html  role_permission_new.html  role_permissions.html  user.html  user_new.html  users.html
